feat(perf): add Hibernate L2 cache benchmark, DTO projections, and Brotli static compression